feat(quizgame-frontend): create list stagiaires interface

--- a/src/app/administrator/components/navbar-admin/navbar-admin.component.html
+++ b/src/app/administrator/components/navbar-admin/navbar-admin.component.html
@@ -10,7 +10,7 @@
   </p>
 
   <mat-menu #menu_stagiaire="matMenu">
-    <button mat-menu-item>
+    <button mat-menu-item (click)="goAddInternPage()">
       <span>Ajouter un stagiaire</span>
     </button>
   </mat-menu>
