--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,26 @@
-<p>login works!</p>
+
+<div class="container sign w-50 h-75 mb-auto mt-5">
+  <form (ngSubmit)="loginUser()" [formGroup]="signinForm">
+    <small class="text-danger">{{msg}}</small>
+    <div class="image d-flex justify-content-center">
+      <img src="assets/images/logoProjet.png" class="w-50" alt="...">
+    </div>
+
+    <div class="container mx-7 form-inline firstname  w-100">
+
+      <label for="inputText" class="col-sm-2 col-form-label">Username</label>
+      <div class="col-sm-10 d-flex justify-content-center text-align-center">
+        <input type="text" [formControl]="username" class="form-control" id="inputText">
+      </div>
+
+
+      <label for="inputPassword" class="col-sm-2 col-form-label">Password</label>
+      <div class="col-sm-10">
+        <input type="password" [formControl]="password" class="form-control d-flex justify-content-center" id="inputPassword">
+      </div>
+      <div class="button d-flex justify-content-center mt-4 mr-auto">
+        <button type="button" (click)="handleSubmit()" class="btn btn-primary btn-lg ">Se connecter</button>
+      </div>
+    </div>
+  </form>
+</div>
