--- a/src/app/administrator/components/navbar-admin/navbar-admin.component.html
+++ b/src/app/administrator/components/navbar-admin/navbar-admin.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="navbar-admin">
+<!-- <mat-toolbar class="navbar-admin">
   <span>QUIZGAME</span>
   <span class="spacer"></span>
 
@@ -31,4 +31,40 @@
   <button mat-icon-button>
     <mat-icon>logout</mat-icon>
   </button>
-</mat-toolbar>
+</mat-toolbar> -->
+
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary" class="navbar-admin">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="#">DEEZPRO</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="#">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Features</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Pricing</a>
+        </li>
+        <li class="nav-item dropdown">
+       
+          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <button mat-button>
+              <mat-icon>expand_more</mat-icon>
+            </button>          
+          </a>
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">Action</a></li>
+            <li><a class="dropdown-item" href="#">Another action</a></li>
+            <li><a class="dropdown-item" href="#">Something else here</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
