--- a/src/app/administrator/components/quiz/questions/list-question/list-question.component.html
+++ b/src/app/administrator/components/quiz/questions/list-question/list-question.component.html
@@ -2,23 +2,23 @@
 
 <div class="container mt-5">
 
-  <button type="button" class="btn qg-primary-button" routerLink="/administrator/quiz/create"><i class="fa fa-add "></i> &nbsp; Ajouter</button>
+  <button type="button" class="btn qg-primary-button" routerLink="/administrator/quiz/{{quiz.id}}/question/create"><i class="fa fa-add "></i> &nbsp; Ajouter une question</button>
   <br />
 
-  <h2 class="text-center">Liste des questionnaires</h2>
+  <h2 class="text-center">{{this.quiz.title}}</h2>
   <br />
 
   <table class="table" aria-label="liste des stagiaires">
     <thead>
       <tr>
         <th scope="col"></th>
-        <th scope="col">Titre</th>
-        <th scope="col">Description</th>
+        <th scope="col">Libellé</th>
+        <th scope="col">Durée</th>
      
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let quiz of quizzes; let i=index">
+      <tr *ngFor="let question of questions; let i=index">
         <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
@@ -27,21 +27,20 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
               </div>
               <div class="modal-body">
-                Etes vous sûr de vouloir supprimer le questionnaire: <b> {{quiz.title}} </b>
+                Etes vous sûr de vouloir supprimer la question: <b> {{question.wording}} </b>
               </div>
               <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Non</button>
-                <button type="button" class="btn btn-danger" (click)="deleteQuiz(quiz.id!)">Oui</button>
+                <button type="button" class="btn btn-danger" (click)="deleteQuestion(question.id!)">Oui</button>
               </div>
             </div>
           </div>
         </div>
         <th scope="row">{{i+1}}</th>
-        <td>{{quiz.title}}</td>
-        <td>{{quiz.summary}}</td>
+        <td>{{question.wording}}</td>
+        <td>{{question.maxDurationInSeconds}}</td>
      
-        <td><i class=" fa fa-eye qg-icon-add" style="cursor: pointer;" routerLink="/administrator/quiz/{{quiz.id}}/question/list"> &nbsp; 
-        </i><i class="fa fa-user-pen qg-icon-edit" style="cursor: pointer;" routerLink="/administrator/quiz/update/{{quiz.id}}"> &nbsp; 
+        <td><i class="fa fa-user-pen qg-icon-edit" style="cursor: pointer;" routerLink="/administrator/quiz/{{quiz.id}}/question/update/{{question.id}}"> &nbsp; 
         </i>
         <i class="fa-solid fa-trash qg-icon-trash" data-bs-toggle="modal" data-bs-target="#deleteModal" class="fa-solid fa-trash qg-icon-trash" style="cursor: pointer;"></i></td>
       </tr>
