create and update question

--- a/src/app/administrator/components/navbar-admin/navbar-admin.component.html
+++ b/src/app/administrator/components/navbar-admin/navbar-admin.component.html
@@ -24,8 +24,8 @@
             Gestion des questionnaires
           </a>
           <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="/administrator/quiz/list">Ajout d'un questionnaire</a></li>
-            <li><a class="dropdown-item" href="/administrator/quiz/list">Liste des stagiaires</a></li>
+            <li><a class="dropdown-item" href="/administrator/quiz/create">Ajout d'un questionnaire</a></li>
+            <li><a class="dropdown-item" href="/administrator/quiz/list">Liste des questionnaires</a></li>
           </ul>
         </li>
       </ul>
