--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,9 +14,11 @@ body {
 .qg-primary-button {
     background-color: #455bd0 !important;
     color: white !important;
+    text-align: center;
 }
-
-.qg-save-button {
+.qg-danger-button {
+    background-color: #C61E1E !important;
+    color: white !important;
     text-align: center;
 }
 
