--- a/src/app/administrator/components/navbar-admin/navbar-admin.component.html
+++ b/src/app/administrator/components/navbar-admin/navbar-admin.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/administrator/dashboard">Accueil</a>
+          <a class="nav-link active" aria-current="page" href="/administrator">Tableau de bord</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle"role="button" data-bs-toggle="dropdown" aria-expanded="false">
