--- a/src/app/administrator/components/quiz/questions/create-question/create-question.component.html
+++ b/src/app/administrator/components/quiz/questions/create-question/create-question.component.html
@@ -80,7 +80,7 @@
             <p class="text-center mt-3" style="font-size: 12px;">Veuillez ajouter au minimum 2 réponses</p>
             <div *ngFor="let answer of answers" class="text-center response mt-3 mb-3"> <b>{{answer.wording}}</b>
                 &nbsp;
-                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
+             <!-- <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
                     aria-hidden="true">
                     <div class="modal-dialog">
                         <div class="modal-content">
@@ -99,12 +99,12 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>-->  
 
                 <i data-bs-toggle="modal" [ngClass]="{'fa-solid fa-check success-check': answer.correct}"
                 style="cursor: pointer;"></i>  &nbsp;
 
-                <i data-bs-toggle="modal" data-bs-target="#deleteModal" class="fa-solid fa-trash qg-icon-trash"
+                <i  (click)="deleteAnswer(answer)" class="fa-solid fa-trash qg-icon-trash"
                     style="cursor: pointer;"></i>
             </div>
 
