--- a/src/app/administrator/components/quiz/questions/list-question/list-question.component.html
+++ b/src/app/administrator/components/quiz/questions/list-question/list-question.component.html
@@ -6,6 +6,8 @@
   <br />
 
   <h2 class="text-center">{{this.quiz.title}}</h2>
+  <h5 class="">Liste des questions</h5>
+
   <br />
 
   <table class="table" aria-label="liste des stagiaires">
@@ -19,30 +21,63 @@
     </thead>
     <tbody>
       <tr *ngFor="let question of questions; let i=index">
-        <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
-          <div class="modal-dialog">
-            <div class="modal-content">
-              <div class="modal-header">
-                <h1 class="modal-title fs-5" id="deleteModalLabel">Suppression</h1>
-                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-              </div>
-              <div class="modal-body">
-                Etes vous sûr de vouloir supprimer la question: <b> {{question.wording}} </b>
-              </div>
-              <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Non</button>
-                <button type="button" class="btn btn-danger" (click)="deleteQuestion(question.id!)">Oui</button>
-              </div>
-            </div>
-          </div>
-        </div>
+       
         <th scope="row">{{i+1}}</th>
         <td>{{question.wording}}</td>
         <td>{{question.maxDurationInSeconds}}</td>
      
         <td><i class="fa fa-user-pen qg-icon-edit" style="cursor: pointer;" routerLink="/administrator/quiz/{{quiz.id}}/question/update/{{question.id}}"> &nbsp; 
         </i>
-        <i class="fa-solid fa-trash qg-icon-trash" data-bs-toggle="modal" data-bs-target="#deleteModal" class="fa-solid fa-trash qg-icon-trash" style="cursor: pointer;"></i></td>
+        <i class="fa-solid fa-trash qg-icon-trash" (click)="deleteQuestion(question.id!)" class="fa-solid fa-trash qg-icon-trash" style="cursor: pointer;"></i></td>
+      </tr>
+
+    </tbody>
+  </table>
+
+  <br/> <br/> <br/>
+  <h5 class="">Liste des abonnés</h5>
+  <br/>
+  <form (ngSubmit)="addIntern()" [formGroup]="addInternForm">
+
+  <div class="row">
+
+    <div class="col-lg-9">
+      <select class="form-select" aria-label="add participant" formControlName="intern">
+        <option *ngFor="let intern of interns " [value]="intern.id" >{{intern.lastname}} {{intern.firstname}} </option>
+      
+      </select>
+
+    </div>
+    <div class="col-lg-3">
+      <button type="submit" class="btn qg-primary-button" ><i class="fa fa-add "></i> &nbsp; Ajouter</button>
+      <br />
+    </div>
+  </div>
+</form>
+
+ 
+
+  <br/>
+
+
+  <table class="table" aria-label="liste des stagiaires">
+    <thead>
+      <tr>
+        <th scope="col"></th>
+        <th scope="col">Nom</th>
+        <th scope="col">Prénom</th>
+     
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let participant of participants; let i=index">
+     
+        <th scope="row">{{i+1}}</th>
+        <td>{{participant.lastname}}</td>
+        <td>{{participant.firstname}}</td>
+     
+        <td>
+        <i class="fa-solid fa-trash qg-icon-trash" (click)="deleteIntern(participant.id!)" class="fa-solid fa-trash qg-icon-trash" style="cursor: pointer;"></i></td>
       </tr>
 
     </tbody>
