--- a/src/app/administrator/components/quiz/questions/update-question/update-question.component.html
+++ b/src/app/administrator/components/quiz/questions/update-question/update-question.component.html
@@ -78,31 +78,12 @@
             <p class="text-center mt-3" style="font-size: 12px;">Veuillez ajouter au minimum 2 réponses</p>
             <div *ngFor="let answer of answers.concat(newAnswers)" class="text-center response mt-3 mb-3"> <b>{{answer.wording}}</b>
                 &nbsp;
-                <div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel"
-                    aria-hidden="true">
-                    <div class="modal-dialog">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h1 class="modal-title fs-5" id="deleteModalLabel">Suppression</h1>
-                                <button type="button" class="btn-close" data-bs-dismiss="modal"
-                                    aria-label="Close"></button>
-                            </div>
-                            <div class="modal-body">
-                                Etes vous sûr de vouloir supprimer la réponse : <b> {{answer.wording}} </b>
-                            </div>
-                            <div class="modal-footer">
-                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Non</button>
-                                <button type="button" class="btn btn-danger" data-bs-dismiss="modal"
-                                    (click)="deleteAnswer(answer)">Oui</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+              
 
                 <i data-bs-toggle="modal" [ngClass]="{'fa-solid fa-check success-check': answer.correct}"
                 style="cursor: pointer;"></i>  &nbsp;
 
-                <i data-bs-toggle="modal" data-bs-target="#deleteModal" class="fa-solid fa-trash qg-icon-trash"
+                <i  (click)="deleteAnswer(answer)" class="fa-solid fa-trash qg-icon-trash"
                     style="cursor: pointer;"></i>
             </div>
 
