--- a/src/app/intern/components/list-questionnaires/list-questionnaires.component.html
+++ b/src/app/intern/components/list-questionnaires/list-questionnaires.component.html
@@ -4,6 +4,8 @@
 
 
   <br />
+  <app-file-dariane link="" names="Liste Questionnaires"></app-file-dariane>
+  <hr>
 
   <h2 class="text-center">Liste des questionnaires disponibles</h2>
   <br />
@@ -24,8 +26,8 @@
         <td>{{quiz.summary}}</td>
         <td>
           <div [routerLink]="['liste/questionnaires', quiz.id]">
-            <button *ngIf="quiz.state === 'NOT_STARTED'" type="button" class="btn btn-success">Démmarer</button>
-            <button *ngIf="quiz.state === 'STARTED'" type="button" class="btn btn-danger">Continuer</button>
+            <button *ngIf="quiz.state === 'NOT_STARTED'" type="button" class="btn demarrer">Démmarer</button>
+            <button *ngIf="quiz.state === 'STARTED'" type="button" class="btn continuer">Continuer</button>
             <button disabled *ngIf="(quiz.state != 'STARTED' && quiz.state != 'NOT_STARTED')" type="button" class="btn btn-danger">Démmarer</button>
           </div>
         </td>
