--- a/src/app/intern/components/question-progress/question-progress.component.html
+++ b/src/app/intern/components/question-progress/question-progress.component.html
@@ -1,43 +1,53 @@
 <app-navbar-intern></app-navbar-intern>
-  {{checkForm?.value | json}}
 <div class="container" *ngIf="checkForm">
   <div class="intitule">
-    <h3 >{{lisQuestions?.wording}}</h3>
+    <h3>{{ lisQuestions?.wording }}</h3>
   </div>
   <div *ngIf="checkForm" class="container">
-<!-- Progress bar -->
-      <div *ngIf="data >= 0" class="circle d-flex justify-content-center align-items-center "><span>Le temps restant :{{data}}</span></div>
-<!-- End progress bar -->
-    <form [formGroup]="checkForm" (ngSubmit)="submit()">
+    <!-- Progress bar -->
+    <div
+      *ngIf="data >= 0"
+      class="circle d-flex justify-content-center align-items-center"
+    >
+      <span>Le temps restant :{{ data }}</span>
+    </div>
+    <!-- End progress bar -->
+    <form [formGroup]="checkForm">
       <div class="checkbox">
-        <div *ngFor="let answer of lisQuestions?.answers" class="form-check d-block">
-          <label id="flexCheckDefault" class="mx-4 my-4">{{answer?.wording}}</label>
-          <input class="form-check form-check-input mx-4 my-4" formControlName ="check" type="checkbox" value="auto" id="flexCheckDefault">
+        <div class="form-group"
+          *ngFor="let answer of lisQuestions?.answers"
+          class="form-check d-block"
+        >
+          <label class="mx-4 my-4">{{answer?.wording}}</label>
+          <input
+            formControlName="check"
+            (change)="onCheckboxChange(answer)"
+            type="checkbox"
+          />
         </div>
       </div>
     </form>
   </div>
 
   <div class="d-flex justify-content-center btn-start mr-5">
-
-    <button type="button"
-    (click)="onSaveForm(this.questionId!, this.idProgress!)"
-    *ngIf="lisQuestions?.numberOfQuestionsLeft != 1"
-
+    <button
+    *ngIf="lisQuestions && lisQuestions?.numberOfQuestionsLeft != 1"
+      type="button"
+      (click)="onSaveForm()"
+      [routerLink]="['/intern/questions/progress', lisQuestions.id]"
       class="btn btn-warning mx-1 my-2"
     >
       Continuer
     </button>
-      <button
+    <button
       type="button"
-      (click)="onSaveForm(this.questionId!, this.idProgress!)"
       *ngIf="lisQuestions?.numberOfQuestionsLeft === 1"
+      (click)="onSaveForm()"
+      [routerLink]="['/intern/listQuestions/questions/resultats/',idProgress]"
       type="submit"
       class="btn btn-danger mx-1 my-2"
     >
       Terminer
     </button>
-
   </div>
 </div>
-
