--- a/src/app/intern/components/questionnaires-items/questionnaires-items.component.html
+++ b/src/app/intern/components/questionnaires-items/questionnaires-items.component.html
@@ -1,5 +1,7 @@
 <app-navbar-intern></app-navbar-intern>
 
+<!-- <app-file-dariane link="liste/questionnaires",id names="Liste Questionnaires"></app-file-dariane> -->
+<hr>
 <div class="container">
   <form class="container" (ngSubmit)="submit()">
     <div *ngIf="step == 1" class="page" id="page1">
@@ -8,24 +10,16 @@
           <h3>Titre</h3>
           <p>{{quiz?.title}}</p>
           <h3>Description</h3>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum culpa odit iste eveniet ab. Quis, dignissimos? Incidunt numquam veritatis delectus illo magni sunt, in repellat, maxime ea soluta aut aliquid.</p>
+          <p>{{quiz?.summary}}</p>
         </div>
         <div class="col">
           <h3>Consignes</h3>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic facilis, officiis assumenda ipsum libero, iure nulla debitis facere autem, nemo accusantium voluptate. Cupiditate porro quo blanditiis eaque quia enim voluptate!</p>
+          <p>
+            Vous aurez au maximum 5 questions avec un temps <br> maximal de 50 secondes par question
+          </p>
         </div>
       </div>
     </div>
-
-    <!-- <div *ngIf="step == 2" class="page" name="check" id="page2">
-      <h3>Titre</h3>
-    </div>
-    <div
-      *ngIf="step == 3"
-      class="page"
-      id="page3"
-    >
-    </div> -->
 
      <div  class="d-flex justify-content-center btn-start mr-5">
 
@@ -38,29 +32,13 @@
         Demarrer
       </button>
       <!-- <button
-        (click)="previous()"
-        *ngIf="step > 1 && step < totalQuestion"
+        [routerLink]="['/intern/questions/progress', quiz?.id]"
+        *ngIf="step != 1"
 
-        type="submit"
-        class="btn btn-danger mx-1 my-2"
+        class="btn btn-warning mx-1 my-2"
       >
-        Suivant
+        continuer
       </button> -->
-     <!-- <button
-        *ngIf="step != 3 || step < 3"
-        type="submit"
-        [disabled]="payForm.invalid"
-        class="btn btn-success mx-1 my-2"
-      >
-        Suivant
-      </button>
-      <button
-        *ngIf="step == 3"
-        type="submit"
-        class="btn btn-primary mx-1 my-2"
-      >
-        Acheter
-      </button>-->
     </div>
   </form>
 </div>
