--- a/src/app/intern/components/resultats/resultats.component.html
+++ b/src/app/intern/components/resultats/resultats.component.html
@@ -1,1 +1,24 @@
-<p>resultats works!</p>
+<app-navbar-intern></app-navbar-intern>
+<br>
+<br>
+<hr>
+<div *ngIf="scoreTotal >= 70" class="d-flex justify-content-center align-items-center">
+
+  <div class="container justify-content-center align-items-center">
+    <p class="my-5">Bravo vous ave réussi le test avec un score de:</p>
+    <h1 class="my-5 pctv">{{scoreTotal | number: '1.0-2'}}%</h1>
+  </div>
+
+</div>
+
+<div *ngIf="scoreTotal < 70" class="d-flex justify-content-center align-items-center">
+  <div class="container justify-content-center align-items-center">
+    <p class="my-5">Je suis désolé de vous informer que vous n'avez pas réussi le test <br> Votre score est de :</p>
+    <h1 class="my-5 pcte">{{scoreTotal | number: '1.0-2'}}%</h1>
+  </div>
+
+</div>
+<div class="container">
+  <button [routerLink]="['/intern']"  type="button" class="btn btn-primary">Accueil</button>
+</div>
+
