--- a/src/app/intern/components/list-questionnaires/list-questionnaires.component.html
+++ b/src/app/intern/components/list-questionnaires/list-questionnaires.component.html
@@ -1,10 +1,11 @@
 
 
 <div class="container mt-5">
-
-
   <br />
-  <app-file-dariane link="" names="Liste Questionnaires"></app-file-dariane>
+  <div class="file-dariane fw-bold">
+    <p>Espace stagiaire > questionnaires</p>
+  </div>
+  <!-- <app-file-dariane link="['/intern']" names="['Stagiaire']"></app-file-dariane> -->
   <hr>
 
   <h2 class="text-center">Liste des questionnaires disponibles</h2>
@@ -26,9 +27,9 @@
         <td>{{quiz.summary}}</td>
         <td>
           <div [routerLink]="['liste/questionnaires', quiz.id]">
-            <button *ngIf="quiz.state === 'NOT_STARTED'" type="button" class="btn demarrer">Démmarer</button>
+            <button *ngIf="quiz.state === 'NOT_STARTED'" type="button" class="btn demarrer">Démarrer</button>
             <button *ngIf="quiz.state === 'STARTED'" type="button" class="btn continuer">Continuer</button>
-            <button disabled *ngIf="(quiz.state != 'STARTED' && quiz.state != 'NOT_STARTED')" type="button" class="btn btn-danger">Démmarer</button>
+            <button disabled *ngIf="(quiz.state != 'STARTED' && quiz.state != 'NOT_STARTED')" type="button" class="btn btn-grey">Démmarer</button>
           </div>
         </td>
       </tr>
