--- a/src/app/intern/components/navbar-intern/navbar-intern.component.html
+++ b/src/app/intern/components/navbar-intern/navbar-intern.component.html
@@ -2,4 +2,9 @@
   <div class="container-fluid">
     <a class="navbar-brand" href="/administrator/dashboard">QUIZGAME</a>
   </div>
+ <ul class="navbar-nav">
+  <li class="nav-item">
+    <a class="nav-link" style="cursor: pointer;" aria-current="page"  (click)="signOut()" ><i class="fa-solid fa-right-from-bracket"></i></a>
+  </li>
+</ul>
 </nav>
