--- a/src/app/intern/login/login.component.html
+++ b/src/app/intern/login/login.component.html
@@ -16,7 +16,7 @@
 
       <div class="mb-3">
         <label for="password" class="form-label">Mot de passe</label>
-        <input type="text" formControlName="password" class="form-control" id="password">
+        <input type="password" formControlName="password" class="form-control" id="password">
       </div>
 
       <div style="text-align: center;">
