--- a/src/app/administrator/components/navbar-admin/navbar-admin.component.html
+++ b/src/app/administrator/components/navbar-admin/navbar-admin.component.html
@@ -18,7 +18,7 @@
             <li><a class="dropdown-item" href="/administrator/intern/list">Liste des stagiaires</a></li>
           </ul>
         </li>
-   
+
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             Gestion des questionnaires
@@ -29,7 +29,7 @@
           </ul>
         </li>
         <li class="nav-item">
-          <a class="nav-link" style="cursor: pointer;" aria-current="page"  (click)="signOut()" ><i class="fa-solid fa-right-from-bracket"></i></a>
+          <a class="nav-link" style="cursor: pointer; color: white !important" aria-current="page"  (click)="signOut()" ><i class="fa-solid fa-right-from-bracket"></i></a>
         </li>
 
       </ul>
