--- a/src/app/administrator/administrator.component.html
+++ b/src/app/administrator/administrator.component.html
@@ -29,7 +29,7 @@
             </div>
 
             <div class="mt-5">
-                <button routerLink="" class="btn qg-primary-button">Modifier mon mot de passe</button>
+                <button routerLink="/administrator/admin/update/password/{{id}}" class="btn qg-primary-button">Modifier mon mot de passe</button>
             </div>
             
             <div class="mt-5">
